fixed a bug where the timer was accelerated by 2 times after restarting added z-indexs in header and footer on quiz and main pages

--- a/main_page.css
+++ b/main_page.css
@@ -5,11 +5,12 @@ body{
 }
 
 #main_container{
+    z-index: 0;
     margin: 5% 5% 10% 5%;
     width: 90%;
     min-height: 87.5%;
     height: auto;
-    position: relative;
+    position: fixed;
     left: 0px;
     display: flex;
     align-content: center;
@@ -20,6 +21,7 @@ body{
 }
 
 #footer{
+    z-index: 1;
     display: flex;
     position: fixed;
     align-items: center;
@@ -35,6 +37,8 @@ body{
 }
 
 #header{
+    z-index: 1;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
