--- a/quiz_page.css
+++ b/quiz_page.css
@@ -10,6 +10,7 @@ body{
 }
 
 #header{
+    z-index: 1;
     display: flex;
     position: fixed;
     top: 0;
@@ -19,7 +20,7 @@ body{
     width: 100%;
     height: 70px;
     background-color: #EF6262;
-    border-bottom: 2px solid black;
+    box-shadow: 0 2px 5px black;
 }
 
 #header_text{
@@ -37,6 +38,7 @@ body{
 }
 
 #footer{
+    z-index: 1;
     display: flex;
     position: fixed;
     align-items: center;
@@ -52,6 +54,7 @@ body{
 }
 
 #main_container{
+    z-index: 0;
     width: 100%;
     height: 87.5%;
     position: fixed;
